folders cdefault, formula, markup

--- a/PlasticManufacturer.Client/PlasticManufacturer.Client.csproj
+++ b/PlasticManufacturer.Client/PlasticManufacturer.Client.csproj
@@ -177,6 +177,8 @@
     <Content Include="app\customers\customer.component.html" />
     <Content Include="app\customers\StyleCustomers.css" />
     <Content Include="app\customers\TesteTab.html" />
+    <Content Include="app\cdefaults\cdefault-list.component.html" />
+    <Content Include="app\cdefaults\cdefault.component.html" />
     <Content Include="app\departments\department-list.component.html" />
     <Content Include="app\departments\department.component.html" />
     <Content Include="app\employees\employee-list.component.html" />
@@ -186,6 +188,8 @@
     <Content Include="app\events\event-details\event-details.component.html" />
     <Content Include="app\events\event-details\session-list.component.html" />
     <Content Include="app\events\event-details\upvote.component.css" />
+    <Content Include="app\formulas\formula-list.component.html" />
+    <Content Include="app\formulas\formula.component.html" />
     <Content Include="app\freights\freight-list.component.html" />
     <Content Include="app\genders\gender-list.component.html" />
     <Content Include="app\genders\gender.component.html" />
@@ -195,6 +199,8 @@
     <Content Include="app\js\validation.js" />
     <Content Include="app\maritalStatus\maritalStatus-list.component.html" />
     <Content Include="app\maritalStatus\maritalStatus.component.html" />
+    <Content Include="app\markups\markup-list.component.html" />
+    <Content Include="app\markups\markup.component.html" />
     <Content Include="app\nav\navbar.component.css" />
     <Content Include="app\nav\navbar.component.html" />
     <Content Include="app\opacities\opacity-list.component.html" />
@@ -205,6 +211,15 @@
     <Content Include="app\Pellets\pellet-list.component.html" />
     <Content Include="app\products\product-list.component.html" />
     <Content Include="app\products\product.component.html" />
+    <Content Include="app\rawMaterials\index.js" />
+    <Content Include="app\rawMaterials\pellet-guard.service.js" />
+    <Content Include="app\rawMaterials\rawMaterial-guard.service.js" />
+    <Content Include="app\rawMaterials\rawMaterial-list.component.html" />
+    <Content Include="app\rawMaterials\rawMaterial-list.component.js" />
+    <Content Include="app\rawMaterials\rawMaterial.component.html" />
+    <Content Include="app\rawMaterials\rawMaterial.component.js" />
+    <Content Include="app\rawMaterials\rawMaterial.model.js" />
+    <Content Include="app\rawMaterials\rawMaterial.service.js" />
     <Content Include="app\salesOrders\salesOrder.component.html" />
     <Content Include="app\secondLabels\secondLabel-list.component.html" />
     <Content Include="app\secondLabels\secondLabel.component.html" />
@@ -6566,6 +6581,16 @@
     <Content Include="node_modules\zone.js\README.md" />
     <Content Include="app\css\images\facebox\Thumbs.db" />
     <Content Include="app\css\images\Thumbs.db" />
+    <Content Include="app\rawMaterials\Create.cshtml" />
+    <Content Include="app\rawMaterials\Edit.cshtml" />
+    <Content Include="app\rawMaterials\index.js.map" />
+    <Content Include="app\rawMaterials\Indexx.cshtml" />
+    <Content Include="app\rawMaterials\pellet-guard.service.js.map" />
+    <Content Include="app\rawMaterials\rawMaterial-guard.service.js.map" />
+    <Content Include="app\rawMaterials\rawMaterial-list.component.js.map" />
+    <Content Include="app\rawMaterials\rawMaterial.component.js.map" />
+    <Content Include="app\rawMaterials\rawMaterial.model.js.map" />
+    <Content Include="app\rawMaterials\rawMaterial.service.js.map" />
     <None Include="Properties\PublishProfiles\Homolog.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -6660,6 +6685,12 @@
     <TypeScriptCompile Include="app\customers\customer.model.ts" />
     <TypeScriptCompile Include="app\customers\customer.service.ts" />
     <TypeScriptCompile Include="app\customers\index.ts" />
+    <TypeScriptCompile Include="app\cdefaults\cdefault-guard.service.ts" />
+    <TypeScriptCompile Include="app\cdefaults\cdefault-list.component.ts" />
+    <TypeScriptCompile Include="app\cdefaults\cdefault.component.ts" />
+    <TypeScriptCompile Include="app\cdefaults\cdefault.model.ts" />
+    <TypeScriptCompile Include="app\cdefaults\cdefault.service.ts" />
+    <TypeScriptCompile Include="app\cdefaults\index.ts" />
     <TypeScriptCompile Include="app\departments\department-guard.service.ts" />
     <TypeScriptCompile Include="app\departments\department-list.component.ts" />
     <TypeScriptCompile Include="app\departments\department.component.ts" />
@@ -6693,6 +6724,12 @@
     <TypeScriptCompile Include="app\events\shared\index.ts" />
     <TypeScriptCompile Include="app\events\location-validator.directive.ts" />
     <TypeScriptCompile Include="app\events\shared\restricted-words.validator.ts" />
+    <TypeScriptCompile Include="app\formulas\formula-guard.service.ts" />
+    <TypeScriptCompile Include="app\formulas\formula-list.component.ts" />
+    <TypeScriptCompile Include="app\formulas\formula.component.ts" />
+    <TypeScriptCompile Include="app\formulas\formula.model.ts" />
+    <TypeScriptCompile Include="app\formulas\formula.service.ts" />
+    <TypeScriptCompile Include="app\formulas\index.ts" />
     <TypeScriptCompile Include="app\freights\freight-guard.service.ts" />
     <TypeScriptCompile Include="app\freights\freight-list.component.ts" />
     <TypeScriptCompile Include="app\freights\freight.component.ts" />
@@ -6713,6 +6750,12 @@
     <TypeScriptCompile Include="app\maritalStatus\maritalStatus.component.ts" />
     <TypeScriptCompile Include="app\maritalStatus\maritalStatus.model.ts" />
     <TypeScriptCompile Include="app\maritalStatus\maritalStatus.service.ts" />
+    <TypeScriptCompile Include="app\markups\index.ts" />
+    <TypeScriptCompile Include="app\markups\markup-guard.service.ts" />
+    <TypeScriptCompile Include="app\markups\markup-list.component.ts" />
+    <TypeScriptCompile Include="app\markups\markup.component.ts" />
+    <TypeScriptCompile Include="app\markups\markup.model.ts" />
+    <TypeScriptCompile Include="app\markups\markup.service.ts" />
     <TypeScriptCompile Include="app\nav\navbar.component.ts" />
     <TypeScriptCompile Include="app\opacities\index.ts" />
     <TypeScriptCompile Include="app\opacities\opacity-guard.service.ts" />
@@ -6738,6 +6781,12 @@
     <TypeScriptCompile Include="app\products\product.component.ts" />
     <TypeScriptCompile Include="app\products\product.model.ts" />
     <TypeScriptCompile Include="app\products\product.service.ts" />
+    <TypeScriptCompile Include="app\rawMaterials\index.ts" />
+    <TypeScriptCompile Include="app\rawMaterials\rawMaterial-guard.service.ts" />
+    <TypeScriptCompile Include="app\rawMaterials\rawMaterial-list.component.ts" />
+    <TypeScriptCompile Include="app\rawMaterials\rawMaterial.component.ts" />
+    <TypeScriptCompile Include="app\rawMaterials\rawMaterial.model.ts" />
+    <TypeScriptCompile Include="app\rawMaterials\rawMaterial.service.ts" />
     <TypeScriptCompile Include="app\routes.ts" />
     <TypeScriptCompile Include="app\salesOrders\index.ts" />
     <TypeScriptCompile Include="app\salesOrders\salesOrder-guard.service.ts" />
