--- a/PlasticManufacturer.InfraStructure/PlasticManufacturer.InfraStructure.csproj
+++ b/PlasticManufacturer.InfraStructure/PlasticManufacturer.InfraStructure.csproj
@@ -66,6 +66,10 @@
     <Compile Include="Migrations\201711201753222_alteracaoColorMatcNotes.Designer.cs">
       <DependentUpon>201711201753222_alteracaoColorMatcNotes.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201711251808166_AlteracaoProduto.cs" />
+    <Compile Include="Migrations\201711251808166_AlteracaoProduto.Designer.cs">
+      <DependentUpon>201711251808166_AlteracaoProduto.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\AddressTypeRepository.cs" />
@@ -97,6 +101,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201711201753222_alteracaoColorMatcNotes.resx">
       <DependentUpon>201711201753222_alteracaoColorMatcNotes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711251808166_AlteracaoProduto.resx">
+      <DependentUpon>201711251808166_AlteracaoProduto.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
