--- a/PlasticManufacturer.InfraStructure/PlasticManufacturer.InfraStructure.csproj
+++ b/PlasticManufacturer.InfraStructure/PlasticManufacturer.InfraStructure.csproj
@@ -70,6 +70,10 @@
     <Compile Include="Migrations\201711251808166_AlteracaoProduto.Designer.cs">
       <DependentUpon>201711251808166_AlteracaoProduto.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201711270911112_Alteracao raw Material.cs" />
+    <Compile Include="Migrations\201711270911112_Alteracao raw Material.Designer.cs">
+      <DependentUpon>201711270911112_Alteracao raw Material.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\AddressTypeRepository.cs" />
@@ -104,6 +108,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201711251808166_AlteracaoProduto.resx">
       <DependentUpon>201711251808166_AlteracaoProduto.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711270911112_Alteracao raw Material.resx">
+      <DependentUpon>201711270911112_Alteracao raw Material.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
