--- a/PlasticManufacturer.InfraStructure/App.config
+++ b/PlasticManufacturer.InfraStructure/App.config
@@ -9,8 +9,11 @@
       <add name="PlasticManufacturer" connectionString="Data Source=184.168.194.53; Initial Catalog=PlasticManufacturerHom; User Id=plasticHom; Password=@plasticHom!; MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/> 
      <add name="PlasticManufacturer" connectionString="Data Source=184.168.194.53; Initial Catalog=PlasticManufacturerDev; User Id=plasticDev; Password=plasticDev; MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>
     <add name="PlasticManufacturer" connectionString="Data Source=LENOVO-PC\SQLEXPRESS;Initial Catalog=PlasticManufacturer;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="PlasticManufacturer" connectionString="Data Source=DESKTOP-PCV6P08\SQLEXPRESS;Initial Catalog=PlasticManufacturer;Integrated Security=True" providerName="System.Data.SqlClient" />
     -->
-    <add name="PlasticManufacturer" connectionString="Data Source=184.168.194.53; Initial Catalog=PlasticManufacturerDev; User Id=plasticDev; Password=plasticDev; MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>
+    <add name="PlasticManufacturer" connectionString="Data Source=DESKTOP-PCV6P08\SQLEXPRESS;Initial Catalog=PlasticManufacturer;Integrated Security=True" providerName="System.Data.SqlClient" />
+
+    
 
   </connectionStrings>
   <entityFramework>
