--- a/PlasticManufacturer.InfraStructure/App.config
+++ b/PlasticManufacturer.InfraStructure/App.config
@@ -11,7 +11,7 @@
     <add name="PlasticManufacturer" connectionString="Data Source=LENOVO-PC\SQLEXPRESS;Initial Catalog=PlasticManufacturer;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="PlasticManufacturer" connectionString="Data Source=DESKTOP-PCV6P08\SQLEXPRESS;Initial Catalog=PlasticManufacturer;Integrated Security=True" providerName="System.Data.SqlClient" />
     -->
-    <add name="PlasticManufacturer" connectionString="Data Source=DESKTOP-PCV6P08\SQLEXPRESS;Initial Catalog=PlasticManufacturer;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="PlasticManufacturer" connectionString="Data Source=LENOVO-PC\SQLEXPRESS;Initial Catalog=PlasticManufacturer;Integrated Security=True" providerName="System.Data.SqlClient" />
 
     
 
