--- a/PlasticManufacturer.InfraStructure/PlasticManufacturer.InfraStructure.csproj
+++ b/PlasticManufacturer.InfraStructure/PlasticManufacturer.InfraStructure.csproj
@@ -74,6 +74,10 @@
     <Compile Include="Migrations\201711270911112_Alteracao raw Material.Designer.cs">
       <DependentUpon>201711270911112_Alteracao raw Material.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201711281509388_muitos para muitos customer e endereco.cs" />
+    <Compile Include="Migrations\201711281509388_muitos para muitos customer e endereco.Designer.cs">
+      <DependentUpon>201711281509388_muitos para muitos customer e endereco.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\AddressTypeRepository.cs" />
@@ -111,6 +115,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201711270911112_Alteracao raw Material.resx">
       <DependentUpon>201711270911112_Alteracao raw Material.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711281509388_muitos para muitos customer e endereco.resx">
+      <DependentUpon>201711281509388_muitos para muitos customer e endereco.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
