--- a/PlasticManufacturer.API/Web.config
+++ b/PlasticManufacturer.API/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-PlasticManufacturer.API-20170822105113.mdf;Initial Catalog=aspnet-PlasticManufacturer.API-20170822105113;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="PlasticManufacturer" connectionString="Data Source=DESKTOP-PCV6P08\SQLEXPRESS;Initial Catalog=PlasticManufacturer;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="PlasticManufacturer" connectionString="Data Source=LENOVO-PC\SQLEXPRESS;Initial Catalog=PlasticManufacturer;Integrated Security=True" providerName="System.Data.SqlClient" />
     <!--
     <add name="PlasticManufacturer" connectionString="Data Source=LENOVO-PC\SQLEXPRESS;Initial Catalog=PlasticManufacturer;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="PlasticManufacturer" connectionString="Data Source=DESKTOP-PCV6P08\SQLEXPRESS;Initial Catalog=PlasticManufacturer;Integrated Security=True" providerName="System.Data.SqlClient" />
