--- a/PlasticManufacturer.InfraStructure/PlasticManufacturer.InfraStructure.csproj
+++ b/PlasticManufacturer.InfraStructure/PlasticManufacturer.InfraStructure.csproj
@@ -78,6 +78,10 @@
     <Compile Include="Migrations\201711281509388_muitos para muitos customer e endereco.Designer.cs">
       <DependentUpon>201711281509388_muitos para muitos customer e endereco.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201711281739169_Correcao customer X address.cs" />
+    <Compile Include="Migrations\201711281739169_Correcao customer X address.Designer.cs">
+      <DependentUpon>201711281739169_Correcao customer X address.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\AddressTypeRepository.cs" />
@@ -118,6 +122,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201711281509388_muitos para muitos customer e endereco.resx">
       <DependentUpon>201711281509388_muitos para muitos customer e endereco.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711281739169_Correcao customer X address.resx">
+      <DependentUpon>201711281739169_Correcao customer X address.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
