correcao da tela do pellet e customer

--- a/PlasticManufacturer.Client/PlasticManufacturer.Client.csproj
+++ b/PlasticManufacturer.Client/PlasticManufacturer.Client.csproj
@@ -213,8 +213,8 @@
     <Content Include="app\operationTypes\operationType.component.html" />
     <Content Include="app\packagings\packaging-list.component.html" />
     <Content Include="app\packagings\packaging.component.html" />
-    <Content Include="app\Pellets\pellet.component.html" />
-    <Content Include="app\Pellets\pellet-list.component.html" />
+    <Content Include="app\pellets\pellet.component.html" />
+    <Content Include="app\pellets\pellet-list.component.html" />
     <Content Include="app\products\product-list.component.html" />
     <Content Include="app\products\product.component.html" />
     <Content Include="app\rawMaterials\rawMaterial-list.component.html" />
@@ -6777,12 +6777,12 @@
     <TypeScriptCompile Include="app\packagings\packaging.component.ts" />
     <TypeScriptCompile Include="app\packagings\packaging.model.ts" />
     <TypeScriptCompile Include="app\packagings\packaging.service.ts" />
-    <TypeScriptCompile Include="app\Pellets\index.ts" />
-    <TypeScriptCompile Include="app\Pellets\pellet.model.ts" />
-    <TypeScriptCompile Include="app\Pellets\pellet.service.ts" />
-    <TypeScriptCompile Include="app\Pellets\pellet-guard.service.ts" />
-    <TypeScriptCompile Include="app\Pellets\pellet-list.component.ts" />
-    <TypeScriptCompile Include="app\Pellets\pellet.component.ts" />
+    <TypeScriptCompile Include="app\pellets\index.ts" />
+    <TypeScriptCompile Include="app\pellets\pellet.model.ts" />
+    <TypeScriptCompile Include="app\pellets\pellet.service.ts" />
+    <TypeScriptCompile Include="app\pellets\pellet-guard.service.ts" />
+    <TypeScriptCompile Include="app\pellets\pellet-list.component.ts" />
+    <TypeScriptCompile Include="app\pellets\pellet.component.ts" />
     <TypeScriptCompile Include="app\products\index.ts" />
     <TypeScriptCompile Include="app\products\product-guard.service.ts" />
     <TypeScriptCompile Include="app\products\product-list.component.ts" />
